--- a/clearanceranklist.html
+++ b/clearanceranklist.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ARI Security Clearance Rank List</title>
+    <title>Security Clearance Rank List - Aberration Research Institute</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
     <style>
         body {
@@ -14,7 +14,7 @@
             color: #D3D3D3;
         }
         .navbar {
-            background-color: #1a1a1a;
+            background-color: #4B4B4B;
             overflow: hidden;
             box-shadow: 0 2px 4px rgba(0,0,0,0.4);
         }
@@ -27,34 +27,54 @@
             text-decoration: none;
         }
         .navbar a:hover {
-            background-color: #ddd;
+            background-color: #464646;
             color: black;
         }
         .container {
-            padding: 20px;
-            max-width: 1200px;
-            margin: 0 auto;
-        }
-        h1, h2 {
-            text-align: center;
-            color: #f2f2f2;
-        }
-        p {
-            text-align: justify;
-            font-size: 1.1em;
-            margin-bottom: 20px;
-        }
-        .section {
-            margin: 50px 0;
-            padding: 20px;
+            padding: 40px;
+            margin: 20px auto;
+            max-width: 800px;
             background-color: #4B4B4B;
             border-radius: 8px;
             box-shadow: 0 0 15px rgba(0,0,0,0.2);
         }
+        h1 {
+            font-size: 32px;
+            border-bottom: 2px solid #666;
+            padding-bottom: 10px;
+            margin-bottom: 20px;
+        }
+        h2 {
+            font-size: 24px;
+            color: #D3D3D3;
+            margin-top: 40px;
+            margin-bottom: 10px;
+            border-bottom: 2px solid #666;
+            padding-bottom: 10px;
+        }
+        p, ul {
+            font-size: 18px;
+            line-height: 1.8;
+            color: #D3D3D3;
+        }
+        ul {
+            list-style-type: disc;
+            padding-left: 20px;
+        }
+        li {
+            padding: 5px 0;
+        }
+        .contact {
+            color: #59A3C4;
+            text-decoration: none;
+        }
+        .contact:hover {
+            text-decoration: underline;
+        }
         footer {
             text-align: center;
             padding: 20px;
-            background-color: #1a1a1a;
+            background-color: #4B4B4B;
             border-top: 2px solid #666;
             margin-top: 40px;
         }
@@ -66,53 +86,76 @@
         <a href="ABRlist.html">Aberration Index</a>
         <a href="clearanceranklist.html">Clearance Rank List</a>
         <a href="about.html">About</a>
-        <a href="#research">Research</a>
-        <a href="#contact">Contact</a>
+        <a href="research.html">Research</a>
+        <a href="contact.html">Contact</a>
     </div>
 
     <div class="container">
         <h1>ARI Security Clearance Rank List</h1>
+        <p>The Aberration Research Institute (ARI) employs a strict hierarchy of security clearance levels to ensure that sensitive information is accessed only by authorized personnel. Below is an in-depth look at each clearance level and the roles associated with them.</p>
 
-        <div class="section">
-            <h2>Clearance Level 6 (C6 - Censored and Unknown)</h2>
-            <p><strong>Description:</strong> The highest security level, known only to select high-ranking officials. Information is strictly compartmentalized, ensuring that only those with C6 clearance have access to the most sensitive and classified data. The specifics of C6 clearance are tightly controlled, with very few individuals aware of the full extent of this level's privileges and responsibilities.</p>
-        </div>
+        <h2>Clearance Level 6 (C6 - Censored and Unknown)</h2>
+        <p><strong>Description:</strong> The highest security level, known only to select high-ranking officials. Information at this level is strictly compartmentalized to protect the most sensitive and classified data.</p>
+        <ul>
+            <li><strong>Access:</strong> Top-secret projects, inter-dimensional travel data, high-threat aberration details.</li>
+            <li><strong>Roles:</strong> ARI's top echelon including the Director and trusted advisors.</li>
+            <li><strong>Responsibilities:</strong> Oversee the institute's most critical and sensitive operations.</li>
+        </ul>
 
-        <div class="section">
-            <h2>Clearance Level 5 (C5 - Executive Council)</h2>
-            <p><strong>Description:</strong> Executive Council members oversee critical decisions, classified information, and top-level initiatives. This level involves strategic planning and implementation of high-impact projects. C5 clearance holders have comprehensive knowledge of ARI’s operations and are responsible for major policy decisions and the allocation of resources for aberration containment and research.</p>
-        </div>
+        <h2>Clearance Level 5 (C5 - Executive Council)</h2>
+        <p><strong>Description:</strong> Executive Council members oversee critical decisions, classified information, and top-level initiatives. They are pivotal in strategic planning and resource allocation.</p>
+        <ul>
+            <li><strong>Access:</strong> Comprehensive operational data, high-level policy documents, inter-departmental coordination.</li>
+            <li><strong>Roles:</strong> Senior executives, head strategists.</li>
+            <li><strong>Responsibilities:</strong> Formulate and implement high-impact projects and policies.</li>
+        </ul>
 
-        <div class="section">
-            <h2>Clearance Level 4 (C4 - Division Heads)</h2>
-            <p><strong>Description:</strong> Division Heads control departmental information, vital research data, and containment protocols. They are key decision-makers within their respective departments, managing both personnel and operations to ensure effective research and containment strategies. C4 clearance holders play a crucial role in inter-departmental coordination and the execution of ARI's broader mission.</p>
-        </div>
+        <h2>Clearance Level 4 (C4 - Division Heads)</h2>
+        <p><strong>Description:</strong> Division Heads control departmental information, vital research data, and containment protocols. They ensure effective research and containment strategies within their departments.</p>
+        <ul>
+            <li><strong>Access:</strong> Department-specific data, sensitive project information, advanced containment protocols.</li>
+            <li><strong>Roles:</strong> Heads of research, containment, and operational divisions.</li>
+            <li><strong>Responsibilities:</strong> Manage departmental operations and personnel.</li>
+        </ul>
 
-        <div class="section">
-            <h2>Clearance Level 3 (C3 - Lead Researchers and Containment Specialists)</h2>
-            <p><strong>Description:</strong> Assigned to lead researchers, containment specialists, and agents. Individuals with C3 clearance have access to detailed operational information and sensitive data necessary for their roles. They conduct in-depth research, develop containment protocols, and are actively involved in field operations, ensuring the safety and success of ARI’s missions.</p>
-        </div>
+        <h2>Clearance Level 3 (C3 - Lead Researchers and Containment Specialists)</h2>
+        <p><strong>Description:</strong> Given to lead researchers, containment specialists, and agents. This level involves access to detailed operational information and sensitive data necessary for their specialized roles.</p>
+        <ul>
+            <li><strong>Access:</strong> Detailed research data, containment plans, and operational protocols.</li>
+            <li><strong>Roles:</strong> Senior researchers, lead containment specialists, field agents.</li>
+            <li><strong>Responsibilities:</strong> Conduct research, develop and implement containment strategies, handle field operations.</li>
+        </ul>
 
-        <div class="section">
-            <h2>Clearance Level 2 (C2 - Support Personnel)</h2>
-            <p><strong>Description:</strong> Assigned to support staff including administration, analysts, security, and tech support. Their access is restricted to the information necessary for their specific tasks. C2 personnel provide essential services that support the smooth operation of ARI, ensuring that critical functions are maintained and that higher-level personnel can focus on their specialized tasks.</p>
-        </div>
+        <h2>Clearance Level 2 (C2 - Support Personnel)</h2>
+        <p><strong>Description:</strong> Assigned to support staff including administration, analysts, security, and tech support. Access is restricted to information necessary for their tasks.</p>
+        <ul>
+            <li><strong>Access:</strong> Operational support data, administrative records, general security information.</li>
+            <li><strong>Roles:</strong> Administrative staff, data analysts, security personnel, technical support.</li>
+            <li><strong>Responsibilities:</strong> Provide essential services to support ARI's operations.</li>
+        </ul>
 
-        <div class="section">
-            <h2>Clearance Level 1 (C1 - General Personnel)</h2>
-            <p><strong>Description:</strong> Covers general personnel with access to basic information required for routine operations. C1 personnel do not handle sensitive data but perform essential tasks that keep ARI operational. They are involved in day-to-day activities, maintenance, and general support roles.</p>
-        </div>
+        <h2>Clearance Level 1 (C1 - General Personnel)</h2>
+        <p><strong>Description:</strong> Covers general personnel with access to basic information required for routine operations. These individuals do not handle sensitive data.</p>
+        <ul>
+            <li><strong>Access:</strong> Basic operational information, non-sensitive data.</li>
+            <li><strong>Roles:</strong> Maintenance staff, general operational personnel.</li>
+            <li><strong>Responsibilities:</strong> Perform day-to-day tasks and support roles within ARI.</li>
+        </ul>
 
-        <div class="section">
-            <h2>Clearance Level 0 (C0 - Non-essential Personnel)</h2>
-            <p><strong>Description:</strong> Limited access to critical information. Includes expendable personnel such as death row convicts, terminally ill individuals, and volunteers. This clearance level is regulated to minimize risks and ensure ethical standards are maintained, with protocols reviewed by an Ethical Review Board to safeguard the well-being and consent of these individuals.</p>
-        </div>
+        <h2>Clearance Level 0 (C0 - Non-essential Personnel)</h2>
+        <p><strong>Description:</strong> Limited access to critical information. Includes expendable personnel such as death row convicts, terminally ill individuals, and volunteers.</p>
+        <ul>
+            <li><strong>Access:</strong> Highly restricted, minimal critical information.</li>
+            <li><strong>Roles:</strong> Volunteers, non-critical support roles.</li>
+            <li><strong>Responsibilities:</strong> Engage in specific tasks with minimal risk exposure, under strict ethical review.</li>
+        </ul>
 
-        <div class="section">
-            <h2>Personnel Advancement and Training</h2>
-            <p><strong>Advancement:</strong> Clearance levels can be adjusted based on performance, training, and qualifications. ARI provides a clear career progression path, offering regular reviews and targeted training to prepare personnel for higher responsibilities. This system ensures that only the most capable and trusted individuals advance to higher clearance levels.</p>
-            <p><strong>Training:</strong> Comprehensive training programs are designed to equip personnel with the necessary skills and knowledge to handle their duties effectively. This includes specialized courses in aberration research, containment protocols, emergency response, and ethical considerations. Continuous education and skill development are emphasized to maintain high standards of competence and readiness within ARI.</p>
-        </div>
+        <h2>Personnel Advancement and Training</h2>
+        <p>Clearance levels can be adjusted based on performance, training, and qualifications. ARI provides a clear career progression path with regular reviews and targeted training to handle higher responsibilities.</p>
+        <ul>
+            <li><strong>Advancement:</strong> Performance reviews, additional qualifications, and demonstrated competencies can lead to clearance upgrades.</li>
+            <li><strong>Training:</strong> Comprehensive programs covering aberration research, containment protocols, emergency response, and ethical considerations.</li>
+        </ul>
     </div>
 
     <footer>
