--- a/clearanceranklist.html
+++ b/clearanceranklist.html
@@ -16,7 +16,6 @@
         .navbar {
             background-color: #4B4B4B;
             overflow: hidden;
-            box-shadow: 0 2px 4px rgba(0,0,0,0.4);
         }
         .navbar a {
             float: left;
@@ -31,7 +30,7 @@
             color: black;
         }
         .container {
-            padding: 40px;
+            padding: 20px;
             margin: 20px auto;
             max-width: 800px;
             background-color: #4B4B4B;
@@ -39,44 +38,29 @@
             box-shadow: 0 0 15px rgba(0,0,0,0.2);
         }
         h1 {
-            font-size: 32px;
-            border-bottom: 2px solid #666;
-            padding-bottom: 10px;
-            margin-bottom: 20px;
+            font-size: 22px;
+            border-bottom: 1px solid #666;
+            padding-bottom: 2px;
         }
         h2 {
-            font-size: 24px;
+            font-size: 18px;
             color: #D3D3D3;
             margin-top: 40px;
-            margin-bottom: 10px;
-            border-bottom: 2px solid #666;
-            padding-bottom: 10px;
+            margin-bottom: -10px;
+            border-bottom: 1px solid #666;
+            padding-bottom: 2px;
         }
         p, ul {
-            font-size: 18px;
-            line-height: 1.8;
+            font-size: 16px;
+            line-height: 1.6;
             color: #D3D3D3;
         }
         ul {
-            list-style-type: disc;
-            padding-left: 20px;
+            list-style-type: none;
+            padding-left: 0;
         }
         li {
             padding: 5px 0;
-        }
-        .contact {
-            color: #59A3C4;
-            text-decoration: none;
-        }
-        .contact:hover {
-            text-decoration: underline;
-        }
-        footer {
-            text-align: center;
-            padding: 20px;
-            background-color: #4B4B4B;
-            border-top: 2px solid #666;
-            margin-top: 40px;
         }
     </style>
 </head>
@@ -91,75 +75,31 @@
     </div>
 
     <div class="container">
-        <h1>ARI Security Clearance Rank List</h1>
-        <p>The Aberration Research Institute (ARI) employs a strict hierarchy of security clearance levels to ensure that sensitive information is accessed only by authorized personnel. Below is an in-depth look at each clearance level and the roles associated with them.</p>
+        <h1>Security Clearance Rank List</h1>
 
         <h2>Clearance Level 6 (C6 - Censored and Unknown)</h2>
-        <p><strong>Description:</strong> The highest security level, known only to select high-ranking officials. Information at this level is strictly compartmentalized to protect the most sensitive and classified data.</p>
-        <ul>
-            <li><strong>Access:</strong> Top-secret projects, inter-dimensional travel data, high-threat aberration details.</li>
-            <li><strong>Roles:</strong> ARI's top echelon including the Director and trusted advisors.</li>
-            <li><strong>Responsibilities:</strong> Oversee the institute's most critical and sensitive operations.</li>
-        </ul>
+        <p><strong>Description:</strong> Highest security level, known to select high-ranking officials. Strictly compartmentalized.</p>
 
         <h2>Clearance Level 5 (C5 - Executive Council)</h2>
-        <p><strong>Description:</strong> Executive Council members oversee critical decisions, classified information, and top-level initiatives. They are pivotal in strategic planning and resource allocation.</p>
-        <ul>
-            <li><strong>Access:</strong> Comprehensive operational data, high-level policy documents, inter-departmental coordination.</li>
-            <li><strong>Roles:</strong> Senior executives, head strategists.</li>
-            <li><strong>Responsibilities:</strong> Formulate and implement high-impact projects and policies.</li>
-        </ul>
+        <p><strong>Description:</strong> Executive Council members oversee critical decisions, classified information, and top-level initiatives.</p>
 
         <h2>Clearance Level 4 (C4 - Division Heads)</h2>
-        <p><strong>Description:</strong> Division Heads control departmental information, vital research data, and containment protocols. They ensure effective research and containment strategies within their departments.</p>
-        <ul>
-            <li><strong>Access:</strong> Department-specific data, sensitive project information, advanced containment protocols.</li>
-            <li><strong>Roles:</strong> Heads of research, containment, and operational divisions.</li>
-            <li><strong>Responsibilities:</strong> Manage departmental operations and personnel.</li>
-        </ul>
+        <p><strong>Description:</strong> Division Heads control departmental information, vital research data, and containment protocols. Key decision-makers.</p>
 
         <h2>Clearance Level 3 (C3 - Lead Researchers and Containment Specialists)</h2>
-        <p><strong>Description:</strong> Given to lead researchers, containment specialists, and agents. This level involves access to detailed operational information and sensitive data necessary for their specialized roles.</p>
-        <ul>
-            <li><strong>Access:</strong> Detailed research data, containment plans, and operational protocols.</li>
-            <li><strong>Roles:</strong> Senior researchers, lead containment specialists, field agents.</li>
-            <li><strong>Responsibilities:</strong> Conduct research, develop and implement containment strategies, handle field operations.</li>
-        </ul>
+        <p><strong>Description:</strong> Given to lead researchers, containment specialists, and agents. Access includes detailed operational information and sensitive data.</p>
 
         <h2>Clearance Level 2 (C2 - Support Personnel)</h2>
-        <p><strong>Description:</strong> Assigned to support staff including administration, analysts, security, and tech support. Access is restricted to information necessary for their tasks.</p>
-        <ul>
-            <li><strong>Access:</strong> Operational support data, administrative records, general security information.</li>
-            <li><strong>Roles:</strong> Administrative staff, data analysts, security personnel, technical support.</li>
-            <li><strong>Responsibilities:</strong> Provide essential services to support ARI's operations.</li>
-        </ul>
+        <p><strong>Description:</strong> Assigned to support staff (admin, analysts, security, tech support). Restricted to necessary information.</p>
 
         <h2>Clearance Level 1 (C1 - General Personnel)</h2>
-        <p><strong>Description:</strong> Covers general personnel with access to basic information required for routine operations. These individuals do not handle sensitive data.</p>
-        <ul>
-            <li><strong>Access:</strong> Basic operational information, non-sensitive data.</li>
-            <li><strong>Roles:</strong> Maintenance staff, general operational personnel.</li>
-            <li><strong>Responsibilities:</strong> Perform day-to-day tasks and support roles within ARI.</li>
-        </ul>
+        <p><strong>Description:</strong> Covers general personnel with access to basic information. Involved in routine operations, no sensitive data.</p>
 
         <h2>Clearance Level 0 (C0 - Non-essential Personnel)</h2>
-        <p><strong>Description:</strong> Limited access to critical information. Includes expendable personnel such as death row convicts, terminally ill individuals, and volunteers.</p>
-        <ul>
-            <li><strong>Access:</strong> Highly restricted, minimal critical information.</li>
-            <li><strong>Roles:</strong> Volunteers, non-critical support roles.</li>
-            <li><strong>Responsibilities:</strong> Engage in specific tasks with minimal risk exposure, under strict ethical review.</li>
-        </ul>
+        <p><strong>Description:</strong> Limited access to critical information. Includes expendable personnel like death row convicts, terminally ill individuals, and volunteers. Regulated to minimize risks. Ethical protocols are reviewed by an Ethical Review Board to ensure well-being and consent.</p>
 
         <h2>Personnel Advancement and Training</h2>
         <p>Clearance levels can be adjusted based on performance, training, and qualifications. ARI provides a clear career progression path with regular reviews and targeted training to handle higher responsibilities.</p>
-        <ul>
-            <li><strong>Advancement:</strong> Performance reviews, additional qualifications, and demonstrated competencies can lead to clearance upgrades.</li>
-            <li><strong>Training:</strong> Comprehensive programs covering aberration research, containment protocols, emergency response, and ethical considerations.</li>
-        </ul>
     </div>
-
-    <footer>
-        <p>&copy; 2024 Aberration Research Institute. All rights reserved.</p>
-    </footer>
 </body>
 </html>
