--- a/homepage.html
+++ b/homepage.html
@@ -62,6 +62,12 @@
             text-align: center;
             font-size: 1.2em;
         }
+        .contact {
+            color: #59A3C4;
+        }
+        .contact:hover {
+            text-decoration: underline;
+        }
         footer {
             text-align: center;
             padding: 20px;
