--- a/clearanceranklist.html
+++ b/clearanceranklist.html
@@ -23,44 +23,44 @@
             color: #f2f2f2;
             text-align: center;
             padding: 14px 20px;
-            text-decoration: none;
+            text-decoration: none.
         }
         .navbar a:hover {
             background-color: #464646;
-            color: black;
+            color: black.
         }
         .container {
             padding: 20px;
             margin: 20px auto;
             max-width: 800px;
             background-color: #4B4B4B;
-            border-radius: 8px;
-            box-shadow: 0 0 15px rgba(0,0,0,0.2);
+            border-radius: 8px.
+            box-shadow: 0 0 15px rgba(0,0,0,0.2).
         }
         h1 {
             font-size: 22px;
             border-bottom: 1px solid #666;
-            padding-bottom: 2px;
+            padding-bottom: 2px.
         }
         h2 {
-            font-size: 18px;
-            color: #D3D3D3;
-            margin-top: 40px;
-            margin-bottom: -10px;
-            border-bottom: 1px solid #666;
-            padding-bottom: 2px;
+            font-size: 18px.
+            color: #D3D3D3.
+            margin-top: 40px.
+            margin-bottom: -10px.
+            border-bottom: 1px solid #666.
+            padding-bottom: 2px.
         }
         p, ul {
-            font-size: 16px;
-            line-height: 1.6;
-            color: #D3D3D3;
+            font-size: 16px.
+            line-height: 1.6.
+            color: #D3D3D3.
         }
         ul {
-            list-style-type: none;
-            padding-left: 0;
+            list-style-type: none.
+            padding-left: 0.
         }
         li {
-            padding: 5px 0;
+            padding: 5px 0.
         }
     </style>
 </head>
@@ -78,12 +78,11 @@
         <h1>Security Clearance Rank List</h1>
 
         <h2>Clearance Level 6 (C6 - Censored and Unknown)</h2>
-        <p><strong>Description:</strong> The highest security level, known only to select high-ranking officials. Information is strictly compartmentalized to protect the most sensitive and classified data.</p>
+        <p><strong>Description:</strong> The highest security level, known only to select high-ranking officials. Information at this level is strictly compartmentalized to protect the most sensitive and classified data.</p>
         <ul>
-            <li><strong>Access:</strong> Top-secret projects, inter-dimensional travel data, high-threat aberration details.</li>
+            <li><strong>Access:</strong> Top-secret projects and highly confidential operations.</li>
             <li><strong>Roles:</strong> ARI's top echelon including the Director and trusted advisors.</li>
             <li><strong>Responsibilities:</strong> Oversee the institute's most critical and sensitive operations.</li>
-            <li><strong>Examples:</strong> Decisions on inter-dimensional exploration missions, handling of Class V and Z aberrations.</li>
         </ul>
 
         <h2>Clearance Level 5 (C5 - Executive Council)</h2>
@@ -92,7 +91,6 @@
             <li><strong>Access:</strong> Comprehensive operational data, high-level policy documents, inter-departmental coordination.</li>
             <li><strong>Roles:</strong> Senior executives, head strategists.</li>
             <li><strong>Responsibilities:</strong> Formulate and implement high-impact projects and policies.</li>
-            <li><strong>Examples:</strong> Approving major research initiatives, overseeing critical containment protocols.</li>
         </ul>
 
         <h2>Clearance Level 4 (C4 - Division Heads)</h2>
@@ -101,7 +99,6 @@
             <li><strong>Access:</strong> Department-specific data, sensitive project information, advanced containment protocols.</li>
             <li><strong>Roles:</strong> Heads of research, containment, and operational divisions.</li>
             <li><strong>Responsibilities:</strong> Manage departmental operations and personnel.</li>
-            <li><strong>Examples:</strong> Directing specialized research teams, implementing new containment strategies.</li>
         </ul>
 
         <h2>Clearance Level 3 (C3 - Lead Researchers and Containment Specialists)</h2>
@@ -110,7 +107,6 @@
             <li><strong>Access:</strong> Detailed research data, containment plans, and operational protocols.</li>
             <li><strong>Roles:</strong> Senior researchers, lead containment specialists, field agents.</li>
             <li><strong>Responsibilities:</strong> Conduct research, develop and implement containment strategies, handle field operations.</li>
-            <li><strong>Examples:</strong> Leading field teams during containment breaches, developing new containment technologies.</li>
         </ul>
 
         <h2>Clearance Level 2 (C2 - Support Personnel)</h2>
@@ -119,7 +115,6 @@
             <li><strong>Access:</strong> Operational support data, administrative records, general security information.</li>
             <li><strong>Roles:</strong> Administrative staff, data analysts, security personnel, technical support.</li>
             <li><strong>Responsibilities:</strong> Provide essential services to support ARI's operations.</li>
-            <li><strong>Examples:</strong> Maintaining databases, securing research facilities, providing technical assistance.</li>
         </ul>
 
         <h2>Clearance Level 1 (C1 - General Personnel)</h2>
@@ -128,7 +123,6 @@
             <li><strong>Access:</strong> Basic operational information, non-sensitive data.</li>
             <li><strong>Roles:</strong> Maintenance staff, general operational personnel.</li>
             <li><strong>Responsibilities:</strong> Perform day-to-day tasks and support roles within ARI.</li>
-            <li><strong>Examples:</strong> Facility maintenance, logistical support.</li>
         </ul>
 
         <h2>Clearance Level 0 (C0 - Non-essential Personnel)</h2>
@@ -137,7 +131,6 @@
             <li><strong>Access:</strong> Highly restricted, minimal critical information.</li>
             <li><strong>Roles:</strong> Volunteers, non-critical support roles.</li>
             <li><strong>Responsibilities:</strong> Engage in specific tasks with minimal risk exposure, under strict ethical review.</li>
-            <li><strong>Examples:</strong> Participation in controlled experiments, performing non-sensitive tasks.</li>
         </ul>
 
         <h2>Personnel Advancement and Training</h2>
@@ -145,7 +138,6 @@
         <ul>
             <li><strong>Advancement:</strong> Performance reviews, additional qualifications, and demonstrated competencies can lead to clearance upgrades.</li>
             <li><strong>Training:</strong> Comprehensive programs covering aberration research, containment protocols, emergency response, and ethical considerations.</li>
-            <li><strong>Examples:</strong> Specialized containment workshops, leadership development programs, ethics training sessions.</li>
         </ul>
     </div>
 </body>
