--- a/clearanceranklist.html
+++ b/clearanceranklist.html
@@ -23,49 +23,49 @@
             color: #f2f2f2;
             text-align: center;
             padding: 14px 20px;
-            text-decoration: none.
+            text-decoration: none;
         }
         .navbar a:hover {
             background-color: #464646;
-            color: black.
+            color: black;
         }
         .container {
             padding: 20px;
             margin: 20px auto;
             max-width: 800px;
             background-color: #4B4B4B;
-            border-radius: 8px.
-            box-shadow: 0 0 15px rgba(0,0,0,0.2).
+            border-radius: 8px;
+            box-shadow: 0 0 15px rgba(0,0,0,0.2);
         }
         h1 {
             font-size: 22px;
             border-bottom: 1px solid #666;
-            padding-bottom: 2px.
+            padding-bottom: 2px;
         }
         h2 {
-            font-size: 18px.
-            color: #D3D3D3.
-            margin-top: 40px.
-            margin-bottom: -10px.
-            border-bottom: 1px solid #666.
-            padding-bottom: 2px.
+            font-size: 18px;
+            color: #D3D3D3;
+            margin-top: 40px;
+            margin-bottom: -10px;
+            border-bottom: 1px solid #666;
+            padding-bottom: 2px;
         }
         p, ul {
-            font-size: 16px.
-            line-height: 1.6.
-            color: #D3D3D3.
+            font-size: 16px;
+            line-height: 1.6;
+            color: #D3D3D3;
         }
         ul {
-            list-style-type: none.
-            padding-left: 0.
+            list-style-type: none;
+            padding-left: 0;
         }
         li {
-            padding: 5px 0.
+            padding: 5px 0;
         }
     </style>
 </head>
 <body>
-    <div class="navbar">
+     <div class="navbar">
         <a href="homepage.html">Home</a>
         <a href="ABRlist.html">Aberration Index</a>
         <a href="clearanceranklist.html">Clearance Rank List</a>
@@ -78,67 +78,51 @@
         <h1>Security Clearance Rank List</h1>
 
         <h2>Clearance Level 6 (C6 - Censored and Unknown)</h2>
-        <p><strong>Description:</strong> The highest security level, known only to select high-ranking officials. Information at this level is strictly compartmentalized to protect the most sensitive and classified data.</p>
-        <ul>
-            <li><strong>Access:</strong> Top-secret projects and highly confidential operations.</li>
-            <li><strong>Roles:</strong> ARI's top echelon including the Director and trusted advisors.</li>
-            <li><strong>Responsibilities:</strong> Oversee the institute's most critical and sensitive operations.</li>
-        </ul>
+        <p><strong>Description:</strong> The highest security level, known only to select high-ranking officials. Information at this level is strictly compartmentalized to protect the most sensitive and classified data. </p>
+        <p><strong>Access:</strong> Highly confidential projects and sensitive operations.</p>
+        <p><strong>Roles:</strong> ARI's top echelon, including the Director and trusted advisors.</p>
+        <p><strong>Responsibilities:</strong> Overseeing the institute's most critical and sensitive operations.</p>
 
         <h2>Clearance Level 5 (C5 - Executive Council)</h2>
-        <p><strong>Description:</strong> Executive Council members oversee critical decisions, classified information, and top-level initiatives. They are pivotal in strategic planning and resource allocation.</p>
-        <ul>
-            <li><strong>Access:</strong> Comprehensive operational data, high-level policy documents, inter-departmental coordination.</li>
-            <li><strong>Roles:</strong> Senior executives, head strategists.</li>
-            <li><strong>Responsibilities:</strong> Formulate and implement high-impact projects and policies.</li>
-        </ul>
+        <p><strong>Description:</strong> Executive Council members oversee critical decisions, classified information, and top-level initiatives. They play a crucial role in strategic planning and resource allocation.</p>
+        <p><strong>Access:</strong> Comprehensive operational data, high-level policy documents, inter-departmental coordination.</p>
+        <p><strong>Roles:</strong> Senior executives and head strategists.</p>
+        <p><strong>Responsibilities:</strong> Formulating and implementing high-impact projects and policies.</p>
 
         <h2>Clearance Level 4 (C4 - Division Heads)</h2>
         <p><strong>Description:</strong> Division Heads control departmental information, vital research data, and containment protocols. They ensure effective research and containment strategies within their departments.</p>
-        <ul>
-            <li><strong>Access:</strong> Department-specific data, sensitive project information, advanced containment protocols.</li>
-            <li><strong>Roles:</strong> Heads of research, containment, and operational divisions.</li>
-            <li><strong>Responsibilities:</strong> Manage departmental operations and personnel.</li>
-        </ul>
+        <p><strong>Access:</strong> Department-specific data, sensitive project information, advanced containment protocols.</p>
+        <p><strong>Roles:</strong> Heads of research, containment, and operational divisions.</p>
+        <p><strong>Responsibilities:</strong> Managing departmental operations and personnel.</p>
 
         <h2>Clearance Level 3 (C3 - Lead Researchers and Containment Specialists)</h2>
-        <p><strong>Description:</strong> Given to lead researchers, containment specialists, and agents. This level involves access to detailed operational information and sensitive data necessary for their specialized roles.</p>
-        <ul>
-            <li><strong>Access:</strong> Detailed research data, containment plans, and operational protocols.</li>
-            <li><strong>Roles:</strong> Senior researchers, lead containment specialists, field agents.</li>
-            <li><strong>Responsibilities:</strong> Conduct research, develop and implement containment strategies, handle field operations.</li>
-        </ul>
+        <p><strong>Description:</strong> Assigned to lead researchers, containment specialists, and agents. This level involves access to detailed operational information and sensitive data necessary for their specialized roles.</p>
+        <p><strong>Access:</strong> Detailed research data, containment plans, and operational protocols.</p>
+        <p><strong>Roles:</strong> Senior researchers, lead containment specialists, and field agents.</p>
+        <p><strong>Responsibilities:</strong> Conducting research, developing and implementing containment strategies, and handling field operations.</p>
 
         <h2>Clearance Level 2 (C2 - Support Personnel)</h2>
         <p><strong>Description:</strong> Assigned to support staff including administration, analysts, security, and tech support. Access is restricted to information necessary for their tasks.</p>
-        <ul>
-            <li><strong>Access:</strong> Operational support data, administrative records, general security information.</li>
-            <li><strong>Roles:</strong> Administrative staff, data analysts, security personnel, technical support.</li>
-            <li><strong>Responsibilities:</strong> Provide essential services to support ARI's operations.</li>
-        </ul>
+        <p><strong>Access:</strong> Operational support data, administrative records, general security information.</p>
+        <p><strong>Roles:</strong> Administrative staff, data analysts, security personnel, and technical support.</p>
+        <p><strong>Responsibilities:</strong> Providing essential services to support ARI's operations.</p>
 
         <h2>Clearance Level 1 (C1 - General Personnel)</h2>
         <p><strong>Description:</strong> Covers general personnel with access to basic information required for routine operations. These individuals do not handle sensitive data.</p>
-        <ul>
-            <li><strong>Access:</strong> Basic operational information, non-sensitive data.</li>
-            <li><strong>Roles:</strong> Maintenance staff, general operational personnel.</li>
-            <li><strong>Responsibilities:</strong> Perform day-to-day tasks and support roles within ARI.</li>
-        </ul>
+        <p><strong>Access:</strong> Basic operational information and non-sensitive data.</p>
+        <p><strong>Roles:</strong> Maintenance staff and general operational personnel.</p>
+        <p><strong>Responsibilities:</strong> Performing day-to-day tasks and support roles within ARI.</p>
 
         <h2>Clearance Level 0 (C0 - Non-essential Personnel)</h2>
         <p><strong>Description:</strong> Limited access to critical information. Includes expendable personnel such as death row convicts, terminally ill individuals, and volunteers. This clearance level is regulated to minimize risks and ensure ethical standards are maintained, with protocols reviewed by an Ethical Review Board to safeguard the well-being and consent of these individuals.</p>
-        <ul>
-            <li><strong>Access:</strong> Highly restricted, minimal critical information.</li>
-            <li><strong>Roles:</strong> Volunteers, non-critical support roles.</li>
-            <li><strong>Responsibilities:</strong> Engage in specific tasks with minimal risk exposure, under strict ethical review.</li>
-        </ul>
+        <p><strong>Access:</strong> Highly restricted, minimal critical information.</p>
+        <p><strong>Roles:</strong> Volunteers and non-critical support roles.</p>
+        <p><strong>Responsibilities:</strong> Engaging in specific tasks with minimal risk exposure, under strict ethical review.</p>
 
         <h2>Personnel Advancement and Training</h2>
         <p>Clearance levels can be adjusted based on performance, training, and qualifications. ARI provides a clear career progression path with regular reviews and targeted training to handle higher responsibilities.</p>
-        <ul>
-            <li><strong>Advancement:</strong> Performance reviews, additional qualifications, and demonstrated competencies can lead to clearance upgrades.</li>
-            <li><strong>Training:</strong> Comprehensive programs covering aberration research, containment protocols, emergency response, and ethical considerations.</li>
-        </ul>
+        <p><strong>Advancement:</strong> Performance reviews, additional qualifications, and demonstrated competencies can lead to clearance upgrades.</p>
+        <p><strong>Training:</strong> Comprehensive programs covering aberration research, containment protocols, emergency response, and ethical considerations.</p>
     </div>
 </body>
 </html>
