--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
             color: #D3D3D3;
         }
         .navbar {
-            background-color: #4B4B4B;
+            background-color: #1a1a1a;
             overflow: hidden;
             box-shadow: 0 2px 4px rgba(0,0,0,0.4);
         }
